chore: migrate project configuration and code to Java 17 LTS